# HITL

./: .gitignore  README.md
.claude/: settings.json
hitl-module/: README.md  docker-compose.yml  package.json  pnpm-lock.yaml
hitl-module/.github/workflows/: ci.yml  deploy-staging.yml
hitl-module/apps/web/: index.html  package.json  playwright.config.ts  vite.config.js  vite.config.ts
hitl-module/apps/web/e2e/: global-setup.ts
hitl-module/apps/web/src/: App.tsx  index.css  main.tsx
hitl-module/infra/docker/: README.md  ai-orchestration.Dockerfile  annotation-session.Dockerfile  audit-trail.Dockerfile  collaboration.Dockerfile  document-storage.Dockerfile  epub-conversion.Dockerfile  nginx.conf  notification.Dockerfile  platform-config.Dockerfile  web.Dockerfile
hitl-module/infra/k8s/: README.md
hitl-module/infra/k8s/base/: keda-scaledobject.yaml  kustomization.yaml  namespace.yaml
hitl-module/services/ai-orchestration/: pyproject.toml
hitl-module/services/ai-orchestration/alembic/: env.py
hitl-module/services/ai-orchestration/src/: db.py  kb_client.py  main.py  models.py  post_processor.py  prompts.py
hitl-module/services/ai-orchestration/src/routes/: ai.py
hitl-module/services/ai-orchestration/tests/: test_ai.py
hitl-module/services/annotation-session/: package.json
hitl-module/services/annotation-session/prisma/: schema.prisma
hitl-module/services/annotation-session/src/: app.ts  audit.ts  index.ts  queue.ts  redis.ts
hitl-module/services/audit-trail/: package.json  prisma.config.ts
hitl-module/services/audit-trail/prisma/: schema.prisma
hitl-module/services/audit-trail/src/: app.ts  db.ts  index.ts  queue.ts
hitl-module/services/collaboration/: package.json
hitl-module/services/collaboration/src/: app.ts  index.ts  (+3 more)
hitl-module/services/document-storage/: package.json
hitl-module/services/epub-conversion/: alembic.ini  pyproject.toml
hitl-module/services/epub-conversion/src/: dispatcher.py  main.py  models.py  s3.py  worker.py
hitl-module/services/epub-conversion/src/converters/: base.py  pandoc_converter.py  passthrough_converter.py  pdf_converter.py  xlsx_epub_converter.py
hitl-module/services/epub-conversion/tests/: test_pandoc_converter.py  test_xlsx_converter.py
hitl-module/services/notification/: package.json
hitl-module/services/platform-config/: package.json
hitl-module/tests/load/: annotation-create.k6.js
(+125 files in other folders)
