[tool.poetry]
name = "epub-conversion"
version = "0.1.0"
description = "EPUB conversion service scaffold"
authors = ["Engineering <engineering@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
